// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DurationFormatEditor should render human readable output normally 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Input format"
        id="common.ui.fieldEditor.duration.inputFormatLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isInvalid={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Seconds",
            "value": "seconds",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Output format"
        id="common.ui.fieldEditor.duration.outputFormatLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isInvalid={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Human Readable",
            "value": "humanize",
          },
          Object {
            "text": "Minutes",
            "value": "asMinutes",
          },
        ]
      }
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={
      Array [
        Object {
          "input": -123,
          "output": "converted duration for -123",
        },
        Object {
          "input": 1,
          "output": "converted duration for 1",
        },
        Object {
          "input": 12,
          "output": "converted duration for 12",
        },
        Object {
          "input": 123,
          "output": "converted duration for 123",
        },
        Object {
          "input": 658,
          "output": "converted duration for 658",
        },
        Object {
          "input": 1988,
          "output": "converted duration for 1988",
        },
        Object {
          "input": 3857,
          "output": "converted duration for 3857",
        },
        Object {
          "input": 123292,
          "output": "converted duration for 123292",
        },
        Object {
          "input": 923528271,
          "output": "converted duration for 923528271",
        },
      ]
    }
  />
</Fragment>
`;

exports[`DurationFormatEditor should render non-human readable output normally 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Input format"
        id="common.ui.fieldEditor.duration.inputFormatLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isInvalid={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Seconds",
            "value": "seconds",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Output format"
        id="common.ui.fieldEditor.duration.outputFormatLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isInvalid={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Human Readable",
            "value": "humanize",
          },
          Object {
            "text": "Minutes",
            "value": "asMinutes",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Decimal places"
        id="common.ui.fieldEditor.duration.decimalPlacesLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldNumber
      compressed={false}
      fullWidth={false}
      isInvalid={false}
      isLoading={false}
      max={20}
      min={0}
      onChange={[Function]}
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={
      Array [
        Object {
          "input": -123,
          "output": "converted duration for -123",
        },
        Object {
          "input": 1,
          "output": "converted duration for 1",
        },
        Object {
          "input": 12,
          "output": "converted duration for 12",
        },
        Object {
          "input": 123,
          "output": "converted duration for 123",
        },
        Object {
          "input": 658,
          "output": "converted duration for 658",
        },
        Object {
          "input": 1988,
          "output": "converted duration for 1988",
        },
        Object {
          "input": 3857,
          "output": "converted duration for 3857",
        },
        Object {
          "input": 123292,
          "output": "converted duration for 123292",
        },
        Object {
          "input": 923528271,
          "output": "converted duration for 923528271",
        },
      ]
    }
  />
</Fragment>
`;
